<resources>
    <string name="app_name">Daily Energy Tracker</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="no_entries_all">You have no Entries!</string>
    <string name="no_entries_add">Add a new Entry +</string>
    <string name="no_entries_icon">No entries icon</string>
    <string name="loading_entries_error">Error Loading Entries</string>
    <string name="entries">Entries:</string>
    <string name="title_activity_add_edit_entry">AddEditEntryActivity</string>
    <string name="add_entry">New Entry</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="date_hint">Select Date</string>
    <string name="note_hint">Enter any notes here</string>
    <string name="empty_task_message">Entries can\'t be empty!</string>
    <string name="menu_delete_task">Delete Entry</string>
    <string name="time">Select the time</string>
    <string name="enter_any_time_notes_here">Enter any time notes here</string>
    <string name="addhourlyentry">addHourlyEntry</string>
    <string name="graph_day_button">Graph day button</string>
    <string name="entry_graph">Entry Graph</string>
</resources>
