<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context="me.ryanmiles.dailyenergytracker.entrylist.EntryListActivity"
    tools:showIn="@layout/activity_entry_list">

    <LinearLayout
        android:id="@+id/entriesLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/entriesLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/list_item_padding"
            android:layout_marginRight="@dimen/list_item_padding"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/entries_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/noEntries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/noEntriesIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:contentDescription="@string/no_entries_icon"
            android:src="@drawable/ic_assignment_turned_in_24dp" />

        <TextView
            android:id="@+id/noEntriesMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/list_item_padding"
            android:text="@string/no_entries_all" />

        <TextView
            android:id="@+id/noEntriesAdd"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_entries_add" />
    </LinearLayout>
</RelativeLayout>
